fix dark mode appearance of pagination buttons

--- a/staticfiles/css/base.scss
+++ b/staticfiles/css/base.scss
@@ -158,9 +158,9 @@ html {
   padding: 0.5rem;
 }
 
-#open,
 #page-next,
 #page-prev {
+  @extend .invert;
   width: 1rem;
   height: 1rem;
 }
@@ -185,6 +185,8 @@ html {
 
 #open {
   //   @extend .invert;
+  width: 1rem;
+  height: 1rem;
   @extend %centre-y;
   visibility: hidden;
   z-index: 4;
@@ -399,7 +401,7 @@ input[type="submit"] {
 .big-card {
   @extend %white--black;
   @extend %txt-black--white;
-//   @extend %border-black--white;
+  //   @extend %border-black--white;
   margin: 2rem auto;
   border-radius: 2rem;
   padding: 2rem;
